# Enrich

./: .dockerignore  .env  .env.docker  .gitignore  .mcp.json  .pnpm-approved-builds.json  .replit  DATABASEBUILDER_FEATURE_DOC.md  DEPLOY.md  DEPLOY_FOR_NON_TECHNICAL.md  DEPLOY_ORACLE.md  DEPLOY_README.md  Dockerfile  LAUNCH.html  LOCALHOST_DEPLOY.md  NEXUS_ENGINE.md  ProspectSA_API_Audit.md  README.md  SETUP.md  STANDALONE_SETUP.md  docker-compose.yml  modules.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  railway.toml  render.yaml  replit-run.sh  replit.md  replit.nix  setup.sh  start.sh  stop.sh
.claude/: INDEX.md  MANIFEST.md  README.md  prospectsa_schema.sql  settings.local.json
.claude/docs/: DATABASE.md  DOC_AUDIT.md  ENV.md  OPERATOR_GUIDE.md  SETUP.md  STATUS.md
.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.yml  post-create.sh  post-start.sh
.github/workflows/: ci.yml  docker.yml
artifacts/api-server/: build.ts  custom-sources.json  package.json  tsconfig.json
artifacts/mockup-sandbox/: vite.config.ts
artifacts/prospect-sa/: .env.local  index.html  package.json  requirements.yaml  vite.config.ts
artifacts/python-scout/: main.py  requirements.txt
docs/: AI_CHAT_ARCHITECTURE.md  API.md  ARCHITECTURE.md  DATABASE.md  DEPLOY_CHECKLIST.md  DOC_AUDIT.md  ENV.md  METABASE.md  NEXUS_MIGRATION.md  OPERATOR_GUIDE.md  PROSENGINE_TESTS.md  SETUP.md  STATUS.md
docs/engines/: company-intel.md  (+2 more)
scripts/: deploy-localhost.sh  package.json  reset-and-deploy.sh  run-seed-import.mjs  seed-meshbase.ts  sync-prod.sh
(+287 files in other folders)
