[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.5",
    "beautifulsoup4>=4.14.3",
    "chardet>=7.4.3",
    "fake-useragent>=2.2.0",
    "fastapi>=0.136.1",
    "feedparser>=6.0.12",
    "google-genai>=2.2.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "lxml>=6.1.0",
    "playwright>=1.59.0",
    "pydantic>=2.13.4",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "requests>=2.34.1",
    "scrapy>=2.15.2",
    "tenacity>=9.1.4",
    "tldextract>=5.3.1",
    "uvicorn[standard]>=0.46.0",
]
